# Rcode

./: .gitignore  Cargo.toml  README.es.md  README.md
.atl/: skill-registry.md
crates/acp/: Cargo.toml
crates/acp/src/: events.rs  lib.rs  protocol.rs  server.rs  session.rs
crates/agent/: Cargo.toml
crates/agent/src/: compaction.rs  default_agent.rs  delegation.rs  executor.rs  hooks.rs  lib.rs  permissions.rs  subagent.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/commands/: acp.rs  mod.rs  run.rs  serve.rs  tui.rs
crates/cli/tests/: e2e_test.rs  run_tests.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  agent_definition.rs  agent_loader.rs  agent_registry.rs  auth.rs  command.rs  config.rs  config_loader.rs  dynamic_agent.rs  error.rs  event.rs  lib.rs  message.rs  permission.rs  provider.rs  session.rs  skill.rs  tool.rs
crates/engram/: Cargo.toml
crates/engram/src/: client.rs  engram_tool.rs  error.rs  lib.rs  session_integration.rs  storage.rs  types.rs
crates/event/: Cargo.toml
crates/event/src/: bus.rs  lib.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: lib.rs  service.rs  tdd_compliance.rs  thompson_sampler.rs
crates/intelligence/src/algorithms/: creativity_protector.rs  drift_detector.rs  harness.rs  info_gain.rs  mod.rs  skill_evolvers.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: client.rs  error.rs  lib.rs  lsp_tool.rs  registry.rs  transport.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  error.rs  lib.rs  registry.rs  transport.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: decision.rs  delegation.rs  lib.rs  sandbox.rs
crates/orchestrator/tests/: e2e_tests.rs  integration_tests.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: error.rs  lib.rs  loader.rs  manager.rs  manifest.rs  runtime.rs  types.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  catalog.rs  credentials.rs  factory.rs  google.rs  lib.rs  minimax.rs  mock.rs  openai.rs  openrouter.rs  provider_trait.rs  rate_limit.rs  registry.rs  resolution.rs  zai.rs
crates/providers/src/openai_compat/: config.rs  mod.rs  request.rs  response.rs  transport.rs
crates/runtime/src/: container.rs  error.rs  kubernetes.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: cache_store_impl.rs  error.rs  lib.rs  state.rs  subagent_runner_impl.rs
crates/server/src/routes/: diff.rs  mod.rs  terminal.rs
crates/server/tests/: e2e_delegate_test.rs  integration_test.rs  mock_provider.rs  test_utils.rs
crates/session/: Cargo.toml
crates/session/src/: compaction.rs  compaction_service.rs  lib.rs  service.rs  summarizer.rs
crates/storage/: Cargo.toml
crates/storage/src/: catalog_cache.rs  database.rs  error.rs  lib.rs  message_repo.rs  schema.rs  session_repo.rs
crates/storage/tests/: persistence_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: applypatch.rs  bash.rs  bash_arity.rs  batch.rs  codesearch.rs  command_discovery.rs  command_registry.rs  delegate.rs  edit.rs  edit_fuzzy.rs  file_lock.rs  glob.rs  grep.rs  lib.rs  mcp_tool.rs  mock.rs  multiedit.rs  plan.rs  plan_exit.rs  question.rs  read.rs  registry.rs  session_navigation.rs  skill_discovery.rs  skill_registry.rs  skill_tool.rs  slash_command_tool.rs  task.rs  todowrite.rs  truncate.rs  validator.rs  webfetch.rs  websearch.rs  write.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  lib.rs  main.rs  run.rs
crates/tui/src/views/: chat.rs  input.rs  mod.rs  picker.rs  sidebar.rs
docs/roadmap/: OPENCODE-ALIGNMENT-PLAN.md
web/: Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: streaming-tool-progress.spec.ts
web/e2e/tauri-driver/: README.md
web/e2e/tauri-driver/helpers/: e2e-helpers.mjs
web/e2e/tauri-driver/specs/: chat-prompt-flow.spec.mjs  chat-scroll-ux.spec.mjs  chat-ux.spec.mjs  comprehensive.spec.mjs  explorer-tree.spec.mjs  explorer.spec.mjs  llm-diagnostic.spec.mjs  mru-project-persistence.spec.mjs  privacy-gateway.spec.mjs  project-management.spec.mjs  project-onboarding.spec.mjs  provider-config.spec.mjs  session-lifecycle.spec.mjs  session-ux.spec.mjs  settings-provider.spec.mjs  streaming-realtime.spec.mjs  streaming.spec.mjs  tool-calling.spec.mjs
web/src/: App.tsx  api.rs  lib.rs  main.rs
web/src/api/: fs.ts  sse.ts  types.ts
web/src/components/: CodeBlock.test.tsx  Header.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  ProjectRail.tsx  PromptInput.tsx  RecentProjectsView.tsx  SessionView.test.tsx  SessionView.tsx  Settings.tsx  Terminal.tsx  Toast.tsx  WelcomeScreen.tsx  Workbench.tsx  WorkbenchLeftRail.test.tsx  WorkbenchLeftRail.tsx  WorkbenchTopNav.tsx  chat_view.rs  header.rs  message_item.rs  mod.rs  session_view.rs  sidebar.rs
web/src/components/left-rail/: ExplorerContext.test.tsx  ExplorerContext.tsx  FilterBar.tsx  TreeNodeRow.tsx
web/src/components/parts/: AttachmentPart.test.tsx  AttachmentPart.tsx  CompactionDivider.tsx  IncrementalDiffViewer.tsx  PermissionPrompt.tsx  QuickActions.tsx  ReasoningBlock.test.tsx  ReasoningBlock.tsx  ReasoningStreamPanel.test.tsx  ReasoningStreamPanel.tsx  StreamingTextPart.test.tsx  StreamingTextPart.tsx  StreamingToolCallCard.test.tsx  StreamingToolCallCard.tsx  TextPart.test.tsx  TextPart.tsx  ToolCallCard.test.tsx  ToolCallCard.tsx  ToolResultCard.test.tsx  ToolResultCard.tsx  TurnAvatar.tsx  index.ts
web/src/composables/: useStreamingDraft.test.ts  useStreamingDraft.ts  useVirtualScroll.ts
web/src/context/: ProjectContext.tsx
web/src/debug/: DebugInspector.ts  index.ts
web/src/lib/: remarkMermaidPlugin.ts  sanitizeSchema.ts
web/src/routes/: chat.rs  home.rs  mod.rs  sessions.rs  settings.rs
web/src/styles/: components.css  markdown.css  theme.css
web/src/workers/: markdown.worker.ts
