[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent",
    "crates/session",
    "crates/tools",
    "crates/providers",
    "crates/server",
    "crates/storage",
    "crates/event",
    "crates/cli",
    "crates/config",
    "crates/plugins",
    "crates/tui",
    "crates/engram",
    "crates/mcp",
    "crates/lsp",
    "web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["opencode-rust contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "0.8"
jsonschema = "0.27"
async-trait = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1.0"
tempfile = "3.27"
dirs = "6.0"
parking_lot = "0.12"
glob = "0.3"
