[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/agent",
    "crates/session",
    "crates/tools",
    "crates/providers",
    "crates/server",
    "crates/storage",
    "crates/event",
    "crates/cli",
    "crates/config",
    "crates/plugins",
    "crates/tui",
    "crates/engram",
    "crates/mcp",
    "crates/acp",
    "crates/observability",
    "crates/gen-types",
    "crates/privacy",
    "crates/cognicode",
    "crates/runtime",
    "crates/orchestrator",
    "crates/intelligence",
    "crates/tools/rcode-health",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rcode contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
schemars = "0.8"
jsonschema = "0.27"
ts-rs = "7"
async-trait = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
bytes = "1.0"
tempfile = "3.27"
dirs = "6.0"
parking_lot = "0.12"
glob = "0.3"
rcode-observability = { path = "crates/observability" }
