[package]
name = "opencode-agent"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-event = { path = "../event" }
opencode-providers = { path = "../providers" }
opencode-tools = { path = "../tools" }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
