[package]
name = "rcode-agent"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
rcode-event = { path = "../event" }
rcode-session = { path = "../session" }
rcode-providers = { path = "../providers" }
rcode-tools = { path = "../tools" }
rcode-privacy = { path = "../privacy" }
rcode-cognicode = { path = "../cognicode" }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot = "0.12"
uuid.workspace = true
