[package]
name = "rcode-cli"
version.workspace = true
edition.workspace = true

[lib]
name = "rcode_cli"
path = "src/lib.rs"

[[bin]]
name = "rcode"
path = "src/main.rs"

[dependencies]
rcode-core = { path = "../core" }
rcode-runtime = { path = "../runtime" }
rcode-session = { path = "../session" }
rcode-storage = { path = "../storage" }
rcode-event = { path = "../event" }
rcode-providers = { path = "../providers" }
rcode-tools = { path = "../tools" }
rcode-server = { path = "../server" }
rcode-agent = { path = "../agent" }
rcode-tui = { path = "../tui" }
rcode-acp = { path = "../acp" }
rcode-observability.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio-stream = "0.1"
futures-util = "0.3"
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
