[package]
name = "opencode-config"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
