[package]
name = "rcode-config"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
