[package]
name = "rcode-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
schemars.workspace = true
async-trait = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "6.0"
walkdir = "2"
parking_lot = "0.12.5"
futures.workspace = true
json_comments = "0.2"

[dev-dependencies]
tempfile.workspace = true
