[package]
name = "rcode-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile.workspace = true
