[package]
name = "opencode-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-event = { path = "../event" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
libloading = "0.8"
glob.workspace = true
parking_lot = "0.12"
chrono.workspace = true
