[package]
name = "opencode-providers"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
uuid.workspace = true
chrono.workspace = true
