[package]
name = "rcode-server"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
rcode-session = { path = "../session" }
rcode-event = { path = "../event" }
rcode-providers = { path = "../providers" }
rcode-tools = { path = "../tools" }
rcode-storage = { path = "../storage" }
rcode-agent = { path = "../agent" }
rcode-observability.workspace = true
rcode-lsp.workspace = true
tokio.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tokio-stream = "0.1"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-util = "0.3"
async-stream = "0.3"
async-trait.workspace = true
tokio-util.workspace = true
chrono.workspace = true
uuid.workspace = true
notify = { version = "8", features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.5", default-features = false }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile.workspace = true
