[package]
name = "opencode-session"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-event = { path = "../event" }
opencode-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot = "0.12.5"

[dev-dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
tempfile.workspace = true
