[package]
name = "rcode-session"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
rcode-event = { path = "../event" }
rcode-storage = { path = "../storage" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
parking_lot = "0.12.5"

[dev-dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
tempfile.workspace = true
