[package]
name = "opencode-storage"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.33", features = ["bundled"] }
base64 = "0.22"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
