[package]
name = "rcode-tools"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
rcode-event = { path = "../event" }
rcode-mcp = { path = "../mcp" }
rcode-session = { path = "../session" }
rcode-providers = { path = "../providers" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
jsonschema.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
glob = "0.3"
regex = "1.11"
parking_lot = "0.12"
uuid.workspace = true
dirs.workspace = true
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
walkdir = "2"
patch = "0.7"
futures = "0.3"
strsim = "0.11"
similar = "2"
infer = "0.5"

[dev-dependencies]
tempfile.workspace = true
