[package]
name = "opencode-tui"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-core = { path = "../core" }
opencode-session = { path = "../session" }
opencode-agent = { path = "../agent" }
opencode-event = { path = "../event" }
ratatui = { version = "0.29", features = ["macros"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot = "0.12"
