[package]
name = "rcode-tui"
version.workspace = true
edition.workspace = true

[dependencies]
rcode-core = { path = "../core" }
rcode-session = { path = "../session" }
rcode-agent = { path = "../agent" }
rcode-event = { path = "../event" }
ratatui = { version = "0.29", features = ["macros"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot = "0.12"
